--- a/src/style.css
+++ b/src/style.css
@@ -26,15 +26,35 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  padding: 2rem 3rem 4rem 3rem;
 }
 .title{
   color: var(--color-Neon-Green);
 }
 .icon-dice{
   background-color: hsl(150, 100%, 66%);
-  padding: 0.8rem;
+  padding: 1rem;
   border-radius: 50%;
   line-height: 10px;
   text-align: center;
+   
+}
+
+.icon-button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  bottom:-20px;
+}
+.lead-quote{
+  color: var(--color-Light-Cyan);
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 2rem 0;
+  line-height: 35px;
+}
+.title{
+  letter-spacing: 5px;
 }
 
