--- a/src/style.css
+++ b/src/style.css
@@ -2,24 +2,24 @@
   --color-dark-blue: hsl(218, 23%, 16%);
   --color-Light-Cyan: hsl(193, 38%, 86%);
   --color-Neon-Green: hsl(150, 100%, 66%);
-  --body-font :'Manrope', sans-serif;
+  --body-font: 'Manrope', sans-serif;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
- background-color: var(--color-dark-blue);
- font-family: var(--body-font);
- height: 100vh;
- display: flex;
- align-items: center;
- justify-content: center;
+  background-color: var(--color-dark-blue);
+  font-family: var(--body-font);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.main{
-  width: 500px;
-  background-color: #313A48;
+.main {
+  max-width: 500px;
+  background-color: #313a48;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -28,38 +28,68 @@ body {
   position: relative;
   padding: 2rem 3rem 4rem 3rem;
 }
-.title{
+.main__title {
   color: var(--color-Neon-Green);
+  letter-spacing: 5px;
+  font-size: 0.8rem;
 }
-.icon-dice{
-  background-color: hsl(150, 100%, 66%);
+.main__icon-dice {
+  background-color: var(--color-Neon-Green);
   padding: 1rem;
   border-radius: 50%;
   line-height: 10px;
   text-align: center;
-   
 }
 
-.icon-button{
+.main__icon-button {
   background-color: transparent;
   border: none;
   cursor: pointer;
   position: absolute;
-  bottom:-20px;
+  bottom: -20px;
 }
-.icon-button:hover{
-  background-color: red;
+.main__icon-button:hover {
   border-radius: 50%;
-  box-shadow:10px 12px 96px 17px rgba(82,255,168,0.91); ;
+  box-shadow: 10px 12px 96px 17px rgba(82, 255, 168, 0.91);
 }
-.lead-quote{
+.main__lead-quote {
   color: var(--color-Light-Cyan);
   text-align: center;
   font-size: 1.5rem;
   padding: 2rem 0;
   line-height: 35px;
 }
-.title{
-  letter-spacing: 5px;
+.img-icon-moile {
+  display: none;
 }
 
+/* responsive */
+
+@media (max-width: 700px) {
+  html {
+    font-size: 56.25%;
+  }
+  .main {
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 4rem 4rem 5rem 4rem;
+  }
+
+  .img-icon-desktop {
+    display: none;
+  }
+  .img-icon-moile {
+    display: block;
+     width: 300px;
+    padding: 2rem;
+  }
+  .main__lead-quote {
+      line-height: 29px;
+      font-size: 2rem;
+  }
+  .main__title{
+    
+    font-size: 1.4rem;
+    letter-spacing: 2px;
+  }
+}
